--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -1,67 +1,55 @@
-<div class="jumbotron">
-	<div class="row">
-		<div class="col-xs-6">
-			<div class="panel panel-primary">
-				<div class="panel-heading">
-					<strong>Typical air mass:</strong>
-				</div>
-				<div class="panel-body text-center" >
-					<div class="form-group">
-						<label for="airmass">Airmass</label>
-						<input type="number" step="0.05" min="1.0" max="2.0" value="1.2" name="airmass" class="form-control" id="airmass">
-					</div>
-				{%comment %}
-					<select name="airmass">
-						<option value="1.0">1.0</option>
-						<option value="1.15">1.15</option>
-						<option value="1.5">1.5</option>
-						<option value="2.0">2.0</option>
-					</select>
-				{%endcomment %}
-				</div>
-			</div>
+<div class="col-md-2 col-xs-6">
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<strong>Typical air mass:</strong>
 		</div>
-		<div class="col-xs-6" id="image_quality">
-			<div class="panel panel-primary">
-				<div class="panel-heading">
-					<strong>Image quality (seeing): </strong>
-				</div>
-				<div class="panel-body text-center">
-					<select name="seeing">
-						<option value="0.4">0".4</option>
-						<option value="0.6">0".6</option>
-						<option value="0.8">0".8</option>
-						<option value="0.9">0".9</option>
-						<option value="1.0">1".0</option>
-						<option value="1.2">1".2</option>
-						<option value="1.4">1".4</option>
-					</select>
-				</div>
-			</div>
+		<div class="panel-body text-center" >
+			<label for="airmass">Airmass</label>
+			<input type="number" step="0.05" min="1.0" max="2.0" value="1.2" name="airmass" class="form-control" id="airmass">
 		</div>
-		<div class="col-xs-12">
-			<div class="panel panel-primary">
-				<div class="panel-heading">
-					<strong>GTCAO Properties: <a href="#" class="badge"> more info</a></strong>
-				</div>
-				<div class="panel-body">
-					<div class="col-xs-6 text-center">
-						Guide Star separation 
-						<br>
-						<select name="gs_separation">
-							<option value="0">0"</option>
-							<option value="10">10"</option>
-							<option value="20">20"</option>
-							<option value="30">30"</option>
-						</select>
-					</div>
-					<div class="col-xs-6 text-center">
-						Guide Star brightness
-						<input type="number" step="0.1" min="5" max="20" class="form-control" style="width:75px" id="gs_magnitude" name="gs_magnitude" placeholder="9.0" value="9.0" required errorMsg=" (Tab 'Separation to Guide Star [arcsec]') ">
-						mag (R-band)
-					</div>
-				</div>
+	</div>
+</div>
+<div class="col-md-2 col-xs-6" id="image_quality">
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<strong>Image quality: </strong>
+		</div>
+		<div class="panel-body text-center">
+			<label for="seeing">Seeing</label>
+			<select name="seeing" class="form-control" id="seeing">
+				<option value="0.4">0".4</option>
+				<option value="0.6">0".6</option>
+				<option value="0.8">0".8</option>
+				<option value="0.9">0".9</option>
+				<option value="1.0">1".0</option>
+				<option value="1.2">1".2</option>
+				<option value="1.4">1".4</option>
+			</select>
+		</div>
+	</div>
+</div>
+<div class="col-md-8 col-xs-12">
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<strong>GTCAO Properties: <a href="#" class="badge"> more info</a></strong>
+		</div>
+		<div class="panel-body">
+			<div class="col-md-6 text-center">
+				<label for="gs_separation">Guide Star Separation&nbsp;</label>
+				<select name="gs_separation" class="form-control" id="gs_separation">
+					<option value="0">0"</option>
+					<option value="10">10"</option>
+					<option value="20">20"</option>
+					<option value="30">30"</option>
+				</select>
+			</div>
+			<div class="col-md-6 text-center">
+				<label for="gs_magnitude"> Guide Star brightness [mag (R-band)]&nbsp;</label>
+				<input type="number" step="0.1" min="5" max="20" class="form-control text-center" id="gs_magnitude" name="gs_magnitude" placeholder="9.0" value="9.0" required errorMsg=" (Tab 'Separation to Guide Star [arcsec]') ">
 			</div>
 		</div>
 	</div>
+</div>
+<div class="col-xs-12">
+	<input type="submit" class="btn btn-lg btn-block btn-warning" value="Calculate" />
 </div>
