--- a/frida/templates/index.html
+++ b/frida/templates/index.html
@@ -3,20 +3,23 @@
     <ul class="nav nav-tabs">
 		 <li class="active"><a data-toggle="tab" href="#sectionA"><span class="hidden-xs">Astronomical source definition</span><span class="hidden-sm hidden-md hidden-lg hidden-xl">ASD</span></a></li>
 		 <li><a data-toggle="tab" href="#sectionB"><span class="hidden-xs">Observing conditions and GTCAO configuration</span><span class="hidden-sm hidden-md hidden-lg hidden-xl">Observ & GTCAO</span></a></li>
-        <li><a data-toggle="tab" href="#sectionC">FRIDA configuration</a></li>
+       <li><a data-toggle="tab" href="#sectionC">FRIDA configuration</a></li>
+       <li><a data-toggle="tab" href="#results" id='go_results'>Results</a></li>
     </ul>
-	<form class="form-inline" method="POST" action="{% url "calculate" %}" id="calculate_form" target="_blank">
+	<form class="" method="POST" action="{% url "calculate" %}" id="calculate_form" target="_blank">
 	 	<ul class="errorMessages list-group"></ul>
 		{% csrf_token %}
 		<div class="tab-content">
 			<div id="sectionA" class="tab-pane fade in active">
 				{% include "params1.html" %}
 			</div>
-			<div id="sectionB" class="tab-pane fade">
+			<div id="sectionB" class="tab-pane fade form-inline">
 				{% include "params2.html" %}
 			</div>
-			<div id="sectionC" class="tab-pane fade">
+			<div id="sectionC" class="tab-pane fade form-inline">
 				{% include "params3.html" %}
+			</div>
+			<div id="results" class="tab-pane fade">
 			</div>
 		</div>
 	</form>
