--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 </div>
-<div class="col-md-8 col-xs-12">
+<div class="col-md-6 col-md-offset-2 col-xs-12">
 	<div class="panel panel-primary">
 		<div class="panel-heading">
 			<strong>GTCAO Properties: <a href="#" class="badge"> more info</a></strong>
