--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -367,27 +367,9 @@
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<div class="panel panel-primary">
-				<div class="panel-heading">Global Effic</div>
-				<div class="panel-body">
-					<div id="global_efficContainer" style="height: 400px; max-width: 920px; width:100%; margin: 0px auto;"></div>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-6 col-xs-12">
-			<div class="panel panel-primary">
 				<div class="panel-heading">Sky Radiance</div>
 				<div class="panel-body">
 					<div id="sky_radContainer" style="height:400px; max-width:920px; width:100%; margin: 0px auto;"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6 col-xs-12">
-			<div class="panel panel-primary">
-				<div class="panel-heading">Photons</div>
-				<div class="panel-body">
-					<div id="photons_objContainer" style="height: 400px; max-width: 920px; width:100%; margin: 0px auto;"></div>
 				</div>
 			</div>
 		</div>
@@ -400,6 +382,26 @@
 			</div>
 		</div>
 	</div>
+	{% comment %}
+	<div class="row">
+		<div class="col-md-6 col-xs-12">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Global Effic</div>
+				<div class="panel-body">
+					<div id="global_efficContainer" style="height: 400px; max-width: 920px; width:100%; margin: 0px auto;"></div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6 col-xs-12">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Photons</div>
+				<div class="panel-body">
+					<div id="photons_objContainer" style="height: 400px; max-width: 920px; width:100%; margin: 0px auto;"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	{% endcomment %}
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="list-group">
