--- a/frida/templates/base.html
+++ b/frida/templates/base.html
@@ -151,7 +151,7 @@
 		</div> <!-- /container -->
 		<!-- Site footer -->
 		<footer class="footer">
-			<p>&copy; Shidix Technologies 2018</p>
+			<p class="small">&copy; Shidix Technologies 2018</p>
 		</footer>
     </body>
 </html>
