--- a/frida/templates/params1.html
+++ b/frida/templates/params1.html
@@ -123,72 +123,66 @@
 					<div class="panel-heading"> <strong>Brightness: <a href="#" class="badge"> more info </a></strong></div>
 					<div class="panel-body panel-default">
 						<div class="row">
-							<div class="col-md-8">
-								<div class="row">
-									<div class="col-md-5 col-xs-12 form-group form-inline">
-										<div class="panel panel-info">
-											<div class="panel-heading">
-												<label for="spatial_integrated_brightness">Spatially integrated brightness </label>
-											</div>
-											<div class="panel-body">
-													<input type="number" step="0.5" min="5" max="30" class="form-control" id="spatial_integrated_brightness" name="spatial_integrated_brightness" placeholder="17.0" value="17.0" required errorMsg=" (Tab 'Astronomical Source Definition') ">
-													<select class="form-control" name="units_sib" id="units_sib">
-														<option value="mag">mag</option>
-														<option value="wm2um">W/m<sup>2</sup>/&mu;m</option>
-													</select>
-											</div>
-										</div>
+							<div class="col-md-5 col-xs-12 form-group form-inline">
+								<div class="panel panel-info">
+									<div class="panel-heading">
+										<label for="spatial_integrated_brightness">Spatially integrated brightness</label>
 									</div>
-									<div class="col-md-3 col-xs-12  form-group">
-										<div class="panel panel-info">
-											<div class="panel-heading">
-												<label for="extinction"> Extinction (Av) </label><br/>
-											</div>
-											<div class="panel-body">
-												<input type="number" class="form-control" id="extinction" name="extinction" placeholder="0" >
-											</div>
-										</div>
+									<div class="panel-body">
+										<input type="number" step="0.5" min="5" max="30" class="form-control" id="spatial_integrated_brightness" name="spatial_integrated_brightness" placeholder="17.0" value="17.0" required errorMsg=" (Tab 'Astronomical Source Definition') ">
+										<select class="form-control" name="units_sib" id="units_sib">
+											<option value="mag">mag</option>
+											<option value="wm2um">W/m<sup>2</sup>/&mu;m</option>
+										</select>
 									</div>
-									<div class="col-xs-12 col-md-4  form-group ">
-										<div class="panel panel-info"> 
-											<div class="panel-heading"><label>Filter (&mu;)</label></div>
-											<div class="panel-body row">
-												<div class="col-md-6">
-													<select class="form-control" name="band_flux" id="band_flux">
-														<option value="B">Band B</option>
-														<option value="V">Band V</option>
-														<option value="R" selected>Band R</option>
-														<option value="I">Band I</option>
-														<option value="J">Band J</option>
-														<option value="H">Band H</option>
-														<option value="K">Band K</option>
-													</select>
-												</div>
-												<div class="col-md-6">
-												<input type="text" class="form-control" id="wavelength-band-flux" name="wl_band_flux" placeholder="2.2">
-												</div>
-											</div>
+								</div>
+							</div>
+							<div class="col-md-2 col-xs-12  form-group">
+								<div class="panel panel-info">
+									<div class="panel-heading">
+										<label for="extinction"> <span class="hidden-lg">Ext. (Av)</span><span class="hidden-md hidden-xs">Extinction (Av)</span> </label><br/>
+									</div>
+									<div class="panel-body">
+										<input type="number" class="form-control" id="extinction" name="extinction" placeholder="0" >
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-12 col-md-5  form-group ">
+								<div class="panel panel-info"> 
+									<div class="panel-heading"><label>Filter (&mu;)</label></div>
+									<div class="panel-body">
+										<div class="col-md-6">
+											<select class="form-control" name="band_flux" id="band_flux">
+												<option value="B">Band B</option>
+												<option value="V">Band V</option>
+												<option value="R">Band R</option>
+												<option value="I">Band I</option>
+												<option value="J" selected>Band J</option>
+												<option value="H">Band H</option>
+												<option value="K">Band K</option>
+											</select>
+										</div>
+										<div class="col-md-6">
+											<input type="text" class="form-control" id="wavelength-band-flux" name="wl_band_flux" placeholder="2.2">
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4">
-								<div class="row">
-									<div class="col-xs-12 col-md-6 form-group">
-										<div class="panel panel-info panel-velocity-radio">
-											<div class="panel-heading"> <input type="radio" class="form-radio-control" name="velocity_type" id="redshift" value="redshift" onclick="check_collapse_from_heading_class_v2(this, 'panel-info', 'panel-velocity-radio');" checked> <strong> Redshift (z) </strong></div>
-											<div class="panel-body">
-												<input type="number" step="0.01" class="form-control" id="redshift_value" name="redshift_value" placeholder="0.0">
-											</div>
-										</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12 col-md-5 form-group">
+								<div class="panel panel-info panel-velocity-radio">
+									<div class="panel-heading"> <input type="radio" class="form-radio-control" name="velocity_type" id="redshift" value="redshift" onclick="check_collapse_from_heading_class_v2(this, 'panel-info', 'panel-velocity-radio');" checked> <strong> Redshift (z) </strong></div>
+									<div class="panel-body">
+										<input type="number" step="0.01" class="form-control" id="redshift_value" name="redshift_value" placeholder="0.0">
 									</div>
-									<div class="col-xs-12 col-md-6 ">
-										<div class="panel panel-default panel-velocity-radio">
-											<div class="panel-heading"> <input type="radio" name="velocity_type" id="radial_vel" value="radial_vel" onclick="check_collapse_from_heading_class_v2(this, 'panel-info', 'panel-velocity-radio');" > <strong> Radial Vel (Km/s) </strong></div>
-											<div class="panel-body">
-												<input type="number" step="0.01" class="form-control" id="radial_value" name="radial_value" placeholder="0.0" style="width:95%;"> 
-											</div>
-										</div>
+								</div>
+							</div>
+							<div class="col-xs-12 col-md-5 ">
+								<div class="panel panel-default panel-velocity-radio">
+									<div class="panel-heading"> <input type="radio" name="velocity_type" id="radial_vel" value="radial_vel" onclick="check_collapse_from_heading_class_v2(this, 'panel-info', 'panel-velocity-radio');" > <strong> Radial Vel (Km/s) </strong></div>
+									<div class="panel-body">
+										<input type="number" step="0.01" class="form-control" id="radial_value" name="radial_value" placeholder="0.0" style="width:95%;"> 
 									</div>
 								</div>
 							</div>
