--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -1,41 +1,46 @@
-<div class="col-md-2 col-xs-6">
-	<div class="panel panel-primary">
-		<div class="panel-heading">
-			<strong>Typical air mass:</strong>
+<div class="col-md-5 col-lg-4 col-xs-6">
+	<div class="col-md-6 col-lg-6 col-xs-6">
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<strong>Typical air mass:</strong>
+			</div>
+			<div class="panel-body text-center" >
+				<label for="airmass">Airmass</label>
+				<br/>
+				<input type="number" step="0.05" min="1.0" max="2.0" value="1.2" name="airmass" class="form-control" id="airmass">
+			</div>
 		</div>
-		<div class="panel-body text-center" >
-			<label for="airmass">Airmass</label>
-			<input type="number" step="0.05" min="1.0" max="2.0" value="1.2" name="airmass" class="form-control" id="airmass">
+	</div>
+	<div class="col-md-6 col-lg-6 col-xs-6" id="image_quality">
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<strong>Image quality: </strong>
+			</div>
+			<div class="panel-body text-center">
+				<label for="seeing">Seeing</label>
+				<br/>
+				<select name="seeing" class="form-control" id="seeing">
+					<option value="0.4">0".4</option>
+					<option value="0.6">0".6</option>
+					<option value="0.8">0".8</option>
+					<option value="0.9">0".9</option>
+					<option value="1.0">1".0</option>
+					<option value="1.2">1".2</option>
+					<option value="1.4">1".4</option>
+				</select>
+			</div>
 		</div>
 	</div>
 </div>
-<div class="col-md-2 col-xs-6" id="image_quality">
-	<div class="panel panel-primary">
-		<div class="panel-heading">
-			<strong>Image quality: </strong>
-		</div>
-		<div class="panel-body text-center">
-			<label for="seeing">Seeing</label>
-			<select name="seeing" class="form-control" id="seeing">
-				<option value="0.4">0".4</option>
-				<option value="0.6">0".6</option>
-				<option value="0.8">0".8</option>
-				<option value="0.9">0".9</option>
-				<option value="1.0">1".0</option>
-				<option value="1.2">1".2</option>
-				<option value="1.4">1".4</option>
-			</select>
-		</div>
-	</div>
-</div>
-<div class="col-md-6 col-md-offset-2 col-xs-12">
+<div class="col-md-7 col-xs-12 col-lg-8">
 	<div class="panel panel-primary">
 		<div class="panel-heading">
 			<strong>GTCAO Properties: <a href="#" class="badge"> more info</a></strong>
 		</div>
 		<div class="panel-body">
-			<div class="col-md-6 text-center">
+			<div class="col-md-5 text-center">
 				<label for="gs_separation">Guide Star Separation&nbsp;</label>
+				<br/>
 				<select name="gs_separation" class="form-control" id="gs_separation">
 					<option value="0">0"</option>
 					<option value="10">10"</option>
@@ -43,8 +48,9 @@
 					<option value="30">30"</option>
 				</select>
 			</div>
-			<div class="col-md-6 text-center">
+			<div class="col-md-7 text-center">
 				<label for="gs_magnitude"> Guide Star brightness [mag (R-band)]&nbsp;</label>
+				<br/>
 				<input type="number" step="0.1" min="5" max="20" class="form-control text-center" id="gs_magnitude" name="gs_magnitude" placeholder="9.0" value="9.0" required errorMsg=" (Tab 'Separation to Guide Star [arcsec]') ">
 			</div>
 		</div>
