--- a/frida/templates/index.html
+++ b/frida/templates/index.html
@@ -15,7 +15,7 @@
 			<div id="sectionB" class="tab-pane fade form-inline">
 				{% include "params2.html" %}
 			</div>
-			<div id="sectionC" class="tab-pane fade form-inline">
+			<div id="sectionC" class="tab-pane fade">
 				{% include "params3.html" %}
 			</div>
 		</div>
