--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-xs-12 col-md-6">
+	<div class="col-xs-12 col-md-12">
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<div class="panel panel-primary">
@@ -14,16 +14,15 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6">
+			<div class="col-xs-12 col-md-4 col-md-offset-2">
 				<div class="panel panel-primary imaging_dependent">
 					<div class="panel-heading">
 						<strong>Filter:</strong>
 					</div>
 					<div class="panel-body">
-						<div class="row">
-							<div class="col-md-5 text-right"> <label for="filter">Filter</label></div> 
-							<div class="col-md-7">
-								<select class="form-control" name="filter" id="filter" >
+						<div class="row form-group">
+							<div class="col-md-8 col-md-offset-2 col-xs-12">
+								<select class="form-control form-control-sm" name="filter" id="filter" >
 								{% for filter in list_filters %}
 									<option value='{{ filter.Code }}'>{{ filter.Name }}</option>
 								{% endfor %}
@@ -72,48 +71,48 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-md-6">
+	<div class="col-xs-12 col-md-12">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
 				<strong>Calculation method:</strong> <a href="#" class="badge">more info</a>
 			</div>
 			<div class="panel-body">
-				<div class="col-xs-12">
+				<div class="col-xs-12 col-md-6">
 					<div class="panel panel-default">
 						<div class="panel-heading text-center ">
-							<input class="form-control" type="radio" name="type_results" value="SN_ratio"/> S/N ratio
+							<input class="" type="radio" name="type_results" value="SN_ratio"/> S/N ratio
 						</div>
 						<div class="panel-body">
-							<div class="row">
-								<div class="col-xs-12 form-group">
-									<div class="col-xs-4">
+							<div class="row ">
+								<div class="col-xs-12 col-md-6 ">
+									<div class="form-group">
 										<label for="signal_noise">S/N</label>
-									</div>
-									<div class="col-xs-8">
 										<input class="form-control" type="number" id="signal_noise" name="signal_noise" value="5.000" step="0.001"/>
 									</div>
 								</div>
-								<div class="col-xs-12 ">
-									<div class="col-xs-4"> <label for="DIT_exp" >DIT (sec)</label> </div>
-									<div class="col-xs-8"> <input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0000" step="0.0001"/> </div>
+								<div class="col-xs-12 col-md-6">
+									<div class="form-group">
+										<label for="DIT_exp" >DIT (seconds)</label>
+										<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0000" step="0.0001"/>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12">
+				<div class="col-xs-12 col-md-6">
 					<div class="panel panel-default">
 						<div class="panel-heading text-center ">
 							<input class="" type="radio" name="type_results" value="exposure_time"/> Exposure Time
 						</div>
 						<div class="panel-body">
-							<div class="col-xs-12">
-								<div class="col-md-5"> <label for="N_exp"> NDIT </label></div>
-								<div class="col-md-7"> <input class="form-control" type="number" name="N_exp" id="N_exp" value="100"/> </div>
+							<div class="col-xs-12 col-md-6">
+								<label for="N_exp"> NDIT </label>
+								<input class="form-control" type="number" name="N_exp" id="N_exp" value="100"/>
 							</div>
-							<div class="col-md-12">
-								<div class="col-md-5"> <label for="dit_pattern"> DIT Pattern </label></div>
-								<div class="col-md-7"><input class="form-control" type="number" name="dit_pattern" id="dit_pattern" value="1" disabled/> </div>
+							<div class="col-xs-12 col-md-6">
+								<label for="dit_pattern"> DIT Pattern </label>
+								<input class="form-control" type="number" name="dit_pattern" id="dit_pattern" value="1" disabled/>
 							</div>
 						</div>
 					</div>
