Dani. Add static response to view. Change units in x-axis to SNR graph

--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -321,7 +321,7 @@
 			type: "spline",
 			name: "S/N",
 			showInLegend: true,
-			xValueFormatString: "#####.## AA",
+			xValueFormatString: "##### s",
 			yValueFormatString: "#0.00",
 			dataPoints: [
 				{% for my_value in snr %}
