Dani. Add results text

--- a/frida/templates/index.html
+++ b/frida/templates/index.html
@@ -12,7 +12,7 @@
 			<div id="sectionA" class="tab-pane fade in active">
 				{% include "params1.html" %}
 			</div>
-			<div id="sectionB" class="tab-pane fade form-inline">
+			<div id="sectionB" class="tab-pane fade ">
 				{% include "params2.html" %}
 			</div>
 			<div id="sectionC" class="tab-pane fade">
