--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -346,6 +346,150 @@
 
 	}
 	</script>
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item active">Target Setup</li>
+							<li class="list-group-item"> Spatially integrated brightness <span class="badge">{{ target_info.Band }} = {{ target_info.Magnitude }} {{target_info.MagSystem}} </span> </li>
+							<li class="list-group-item"> Flux distribution type <span class="badge"> {{ target_info.energy_type }}</span> </li>
+							<li class="list-group-item"> Geometry <span class="badge"> {{ target_info.source_type}} </span> </li>
+						</ul>
+					</div>
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item active">Sky Conditions</li>
+							<li class="list-group-item"> Airmass <span class="badge">{{ sky_conditions.airmass }}</span> </li>
+							<li class="list-group-item"> Seeing <span class="badge"> {{ sky_conditions.seeing }}</span> </li>
+							<li class="list-group-item"> Seeing Probability <span class="badge"> ????? </span> </li>
+						</ul>
+					</div>
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item active">AO NGS Setup</li>
+							<li class="list-group-item"> Reference star B-R color <span class="badge">?????</span> </li>
+							<li class="list-group-item"> Reference star magnitude (R Band)<span class="badge"> {{ guide_star.Magnitude }}</span> </li>
+							<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
+						</ul>
+					</div>
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item active">Instrument Setup</li>
+							<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.AngularResolution }} mas/pix </span> </li>
+							<li class="list-group-item"> Camera Filter <span class="badge"> {{ filter.Name }}</span> </li>
+							<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
+						</ul>
+					</div>
+					<div class="col-xs-12 col-md-12" >
+						<ul class="list-group">
+							<li class="list-group-item active">Observation Setup</li>
+							<li class="list-group-item"> &nbsp; </li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6" >
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item list-group-item-danger">Trasmission Model</li>
+							<li class="list-group-item"> 
+								Signal to Noise <span class="badge">{{ signal_noise_req }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Detector Integration Time for one exposure <span class="badge">{{ dit }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Number of detector integrations (rounded up) <span class="badge">{{ ndit }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Total exposure time <span class="badge">{{ total_exposure_time }}</span>
+							</li>
+						</ul>
+					</div>
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item"> 
+								Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ signal_noise_req }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Detector linearity/flat-fielding limit (for this DIT) <span class="badge">{{ dit }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Detector saturation limit (e<sup>-</sup>) <span class="badge">{{ ndit }}</span>
+							</li>
+						</ul>
+					</div>
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item"> 
+								Aperture Radius (defining the S/N reference area) <span class="badge">{{ signal_noise_req }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Number of pixels in Aperture <span class="badge">{{ frida_setup.pixscale }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">{{ ndit }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">{{ total_exposure_time }}</span>
+							</li>
+						</ul>
+					</div>
+					<div class="col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item"> 
+								Background (1 DIT) <span class="badge">{{ signal_noise_req }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Limiting magnitude (S/N=3) <span class="badge">{{ dit }}</span>
+							</li>
+							<li class="list-group-item"> 
+								BLIP integration time <span class="badge">{{ ndit }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Encircled Energy (Target)  <span class="badge">{{ encircled_energy }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Estimated {{ filter.Name }}-band ( {{ target_info.lambda_band }} &mu;m ) on-axis Strehl Ratio  <span class="badge">{{ ndit }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Pixel scale in arcsec/pixel <span class="badge">{{ frida_setup.pixscale }}</span>
+							</li>
+							<li class="list-group-item"> 
+								Overall transmission <span class="badge">{{ ndit }}</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6" >
+					<div id='chart_div'> </div>
+					<div id='chart_div3'> </div>
+				</div>
+				<div class="col-xs-6" id="chart_div2">
+					<div class='panel-group'>
+						<div class="panel panel-info">
+							<div class="panel-heading">Intermediate Values</div>
+							<div class="panel-body">
+								<ul class="list-group">
+									<li class="list-group-item"> Encircled Energy <span class="badge">{{ encircled_energy }}</span> </li>
+									<li class="list-group-item"> Aperture radius <span class="badge">{{ Aperture_radius }}</span> </li>
+									<li class="list-group-item"> Npix <span class="badge">{{ AreaNpix }}</span> </li>
+									<li class="list-group-item"> pixscale <span class="badge">{{ Pixscale }}</span> </li>
+									<li class="list-group-item"> Target Photons / s <span class="badge">{{ detected_photons_from_source }}</span> </li>
+									<li class="list-group-item"> Sky Photons  /(s sqr.arcsec)<span class="badge">{{ detected_photons_from_sky_sqarcsec }}</span> </li>
+									<li class="list-group-item"> PhotonNoise per components per unit time<span class="badge">{{ photons_noise }}</span> </li>
+									<li class="list-group-item"> Atmospfheric Transmission <span class="badge">{{ atmospheric_transmission }}</span> </li>
+									<li class="list-group-item"> Efficiency <span class="badge">{{ efficiency }}</span> </li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<div class="panel panel-primary">
