--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 </div>
-<div class="col-md-7 col-xs-12 col-lg-8">
+<div class="col-md-7 col-xs-12 col-lg-8 form-inline">
 	<div class="panel panel-primary">
 		<div class="panel-heading">
 			<strong>GTCAO Properties: <a href="#" class="badge"> more info</a></strong>
